Se arregla el responsive de promociones y ofertasproduct

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
 
     <!-- Sección de ofertas de zona gamer -->
-    <section id="ofertasproduct">
+    <section class="ofertasproduct">
         <div class="namepromo">
             <h2>Ofertas de Zona Gaming</h2>
         </div>
@@ -378,7 +378,7 @@
     </section>
 
     <!-- Sección de ofertas computación -->
-    <section id="ofertasproduct">
+    <section class="ofertasproduct">
         <div class="namepromo">
             <h2>Ofertas de Computación</h2>
         </div>
@@ -591,7 +591,7 @@
     </section>
 
     <!-- Sección de ofertas componentes -->
-    <section id="ofertasproduct">
+    <section class="ofertasproduct">
         <div class="namepromo">
             <h2>Ofertas de Componentes</h2>
         </div>
@@ -772,7 +772,7 @@
                         <span><strong>Crucial </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>M/B AMD B550M DS3H (AM4)</p>
+                        <p>DDR4 8GB 2666MHz Value</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
