--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./scss/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/main.css">
     <link rel="shortcut icon" href="./images/Logoconfondocircular.png">
     <title>GangaStore</title>
 </head>
@@ -20,11 +20,11 @@
 
     <!-- Información escencial para clientes -->
     <div id="information">
-        <span>¡Atención! Los viernes, nuestro horario de tienda y punto de retiro será hasta las 12:00 Hrs. hasta nuevo aviso.</span>
+        <p>¡Atención! Los viernes, nuestro horario de tienda y punto de retiro será hasta las 12:00 Hrs. hasta nuevo aviso.</p>
     </div>
 
     <!-- Sección del head -->
-    <header id="Cabezal">
+    <header id="cabezal">
         <!--  -->
         <div class="containercabezal">
             <div class="logohead">
@@ -34,13 +34,12 @@
                 <div class="presentation">
                     <h1>¡Bienvenidos a GangaStore, tus equipos preferidos a mejor precio!</h1>
                 </div>
-                <div class="buscador">
+                <form action="" class="buscador">
                     <input type="search" placeholder="Busca aquí...">
-                    <button>
+                    <button type="submit" formaction="./pages/categoriesproducts.html">
                         <i class="fa fa-search"></i>
-                        <a href="./pages/categoriesproducts.html">Buscar</a>
                     </button>
-                </div>
+                </form>
             </div>
             <div class="sesioncarro">
                 <button class="seca">
