Se modifica los alt de los IMG de INDEX

--- a/index.html
+++ b/index.html
@@ -132,33 +132,33 @@
         <div class="promocionone">
             <div class="promo">
                 <a href="./pages/categoriesproducts.html">
-                    <img src="./images/promo1.png" alt="">
+                    <img src="./images/promo1.png" alt="imgofertalanzamientoone">
                 </a>
             </div>
             <div class="promo">
                 <a href="./pages/categoriesproducts.html">
-                    <img src="./images/promo2.png" alt="">
+                    <img src="./images/promo2.png" alt="imgofertalanzamientotwo">
                 </a>
             </div>
             <div class="promo">
                 <a href="./pages/categoriesproducts.html">
-                    <img src="./images/promo3.png" alt="">
+                    <img src="./images/promo3.png" alt="imgofertalanzamientothree">
                 </a>
             </div>
             <div class="promo">
                 <a href="./pages/categoriesproducts.html">
-                    <img src="./images/promo4.png" alt="">
+                    <img src="./images/promo4.png" alt="imgofertalanzamientofour">
                 </a>
             </div>
         </div>
         <div class="promociontwo">
             <a href="./pages/categoriesproducts.html">
-                <img src="./images/promo5.png" alt="">
+                <img src="./images/promo5.png" alt="imgofertalanzamientofive">
             </a>
         </div>
         <div class="promocionthree">
             <a href="./pages/categoriesproducts.html">
-                <img src="./images/promo6.png" alt="">
+                <img src="./images/promo6.png" alt="imgofertalanzamientosix">
             </a>
         </div>
     </section>
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G502-XP.jpg" alt="imgoneozg">
+                        <img src="./images/L-G502-XP.jpg" alt="imgtwoozg">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/V-16I5R3-NG.jpg" alt="imgoneozg">
+                        <img src="./images/V-16I5R3-NG.jpg" alt="imgthreeozg">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/T-GGEAR-RG.jpg" alt="imgoneozg">
+                        <img src="./images/T-GGEAR-RG.jpg" alt="imgfourozg">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -322,7 +322,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G604-LS.jpg" alt="imgoneozg">
+                        <img src="./images/L-G604-LS.jpg" alt="imgfiveozg">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -356,7 +356,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/H-ELITE2-ME.jpg" alt="imgoneozg">
+                        <img src="./images/H-ELITE2-ME.jpg" alt="imgsixozg">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -399,7 +399,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/N-DINS-I5.jpg" alt="imgoneozg">
+                        <img src="./images/N-DINS-I5.jpg" alt="imgooneopc">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -433,7 +433,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/N-AF15-TG.jpg" alt="imgoneozg">
+                        <img src="./images/N-AF15-TG.jpg" alt="imgtwoopc">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -467,7 +467,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/N-APA13-M1.jpg" alt="imgoneozg">
+                        <img src="./images/N-APA13-M1.jpg" alt="imgthreeopc">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -501,7 +501,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/N-SBK3-21.jpg" alt="imgoneozg">
+                        <img src="./images/N-SBK3-21.jpg" alt="imgfouropc">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -535,7 +535,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/N-HP21-PX.jpg" alt="imgoneozg">
+                        <img src="./images/N-HP21-PX.jpg" alt="imgfiveopc">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -569,7 +569,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/N-AZ14X-UX.jpg" alt="imgoneozg">
+                        <img src="./images/N-AZ14X-UX.jpg" alt="imgsixopc">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -612,7 +612,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/CPU-R5-4.jpg" alt="imgoneozg">
+                        <img src="./images/CPU-R5-4.jpg" alt="imgoneocomp">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -646,7 +646,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/GAB-GAMAURA-GC1.jpg" alt="imgoneozg">
+                        <img src="./images/GAB-GAMAURA-GC1.jpg" alt="imgtwoocomp">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -680,7 +680,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/GPU-ARX5-4.jpg" alt="imgoneozg">
+                        <img src="./images/GPU-ARX5-4.jpg" alt="imgthreeocomp">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -714,7 +714,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/FP-COR50-PG.jpg" alt="imgoneozg">
+                        <img src="./images/FP-COR50-PG.jpg" alt="imgfourocomp">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -748,7 +748,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/PM-GB5_DH.jpg" alt="imgoneozg">
+                        <img src="./images/PM-GB5_DH.jpg" alt="imgfiveocomp">
                     </div>
                 </a>
                 <div class="valuecart">
@@ -782,7 +782,7 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/MR-CLD4-26MH.jpg" alt="imgoneozg">
+                        <img src="./images/MR-CLD4-26MH.jpg" alt="imgsixocomp">
                     </div>
                 </a>
                 <div class="valuecart">
