Se cambia el buscador de todas las paginas y detalles minimos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!--  -->
         <div class="containercabezal">
             <div class="logohead">
-                <a href="./index.html"><img src="./images/Logoconfondocircular.png" alt="Logo"></a>
+                <a href="./index.html"><img src="./images/Logoconfondocircular.png" alt="logo"></a>
             </div>
             <div class="presearch">
                 <div class="presentation">
