--- a/pages/product.html
+++ b/pages/product.html
@@ -15,27 +15,26 @@
 <body>
     <!-- Información escencial para clientes -->
     <div id="information">
-        <span>¡Atención! Los viernes, nuestro horario de tienda y punto de retiro será hasta las 12:00 Hrs. hasta nuevo aviso.</span>
+        <p>¡Atención! Los viernes, nuestro horario de tienda y punto de retiro será hasta las 12:00 Hrs. hasta nuevo aviso.</p>
     </div>
 
     <!-- Sección del head -->
-    <header id="Cabezal">
+    <header id="cabezal">
         <!--  -->
         <div class="containercabezal">
             <div class="logohead">
-                <a href="../index.html"><img src="../images/logosinfondo.png" alt="Logo"></a>
+                <a href="../index.html"><img src="../images/logosinfondo.png" alt="logo"></a>
             </div>
             <div class="presearch">
                 <div class="presentation">
                     <h1>¡Bienvenidos a GangaStore, tus equipos preferidos a mejor precio!</h1>
                 </div>
-                <div class="buscador">
+                <form action="" class="buscador">
                     <input type="search" placeholder="Busca aquí...">
-                    <button>
+                    <button type="submit" formaction="./categoriesproducts.html">
                         <i class="fa fa-search"></i>
-                        <a href="./categoriesproducts.html">Buscar</a>
                     </button>
-                </div>
+                </form>
             </div>
             <div class="sesioncarro">
                 <button class="seca">
