Se pasa a minuscula el ID del header de contact y login

--- a/pages/login.html
+++ b/pages/login.html
@@ -18,7 +18,7 @@
         <p>¡Atención! Los viernes, nuestro horario de tienda y punto de retiro será hasta las 12:00 Hrs. hasta nuevo aviso.</p>
     </div>
     <!-- Sección del head -->
-    <header id="Cabezal">
+    <header id="cabezal">
         <!--  -->
         <div class="containercabezal">
             <div class="logohead">
