--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Sección del head -->
-    <header id="Cabezal">
+    <header id="cabezal">
         <!--  -->
         <div class="containercabezal">
             <div class="logohead">
