Primer arreglo de responsive de HEADER INDEX como prueba

--- a/index.html
+++ b/index.html
@@ -96,8 +96,11 @@
         </div>
         <!-- Menu de selección-->
         <nav id="menuopciones">
+            <!-- input no llevar form puesto que no es nada de formulario, solo lo estoy utilizando para la funcionalidad de checkeart el bar -->
+            <input type="checkbox" id="check" class="checkbtn">
+            <label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
             <ul>
-                <label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
+                <!-- Llevan siempre a la misma pagina puesto que cuando ya tenga backend, de esa pagina se hara filtro por categoria como ZG, CONSOLAS, ETC -->
                 <li><a href="./pages/categoriesproducts.html">Zona Gaming</a><i class="fas fa-angle-down"></i></li>
                 <li><a href="./pages/categoriesproducts.html">Componentes</a><i class="fas fa-angle-down"></i></li>
                 <li><a href="./pages/categoriesproducts.html">Computación</a><i class="fas fa-angle-down"></i></li>
