Se modifica todo el responsive del header

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <!-- Imagen de cuotas con enlace a pagina de información de los bancos por convenio -->
         <div class="cuotas">
             <a href=""><img src="./images/cuotas.png" alt=""></a>
+            <a href=""><img src="./images/cuotascortas.png" alt=""></a>
         </div>
     </header>
 
