Se modifica el responsive del header en todas las paginas, se arregla el sass

--- a/pages/login.html
+++ b/pages/login.html
@@ -90,8 +90,11 @@
         </div>
         <!-- Menu de selección-->
         <nav id="menuopciones">
+            <!-- input no llevar form puesto que no es nada de formulario, solo lo estoy utilizando para la funcionalidad de checkeart el bar -->
+            <input type="checkbox" id="check" class="checkbtn">
+            <label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
             <ul>
-                <label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
+                <!-- Llevan siempre a la misma pagina puesto que cuando ya tenga backend, de esa pagina se hara filtro por categoria como ZG, CONSOLAS, ETC -->
                 <li><i class="fas fa-home"></i><a href="../index.html">HOME</a></li>
                 <li><a href="./categoriesproducts.html">Zona Gaming</a><i class="fas fa-angle-down"></i></li>
                 <li><a href="./categoriesproducts.html">Componentes</a><i class="fas fa-angle-down"></i></li>
@@ -105,6 +108,7 @@
         <!-- Imagen de cuotas con enlace a pagina de información de los bancos por convenio -->
         <div class="cuotas">
             <a href=""><img src="../images/cuotas.png" alt=""></a>
+            <a href=""><img src="../images/cuotascortas.png" alt=""></a>
         </div>
     </header>
 
