Se da un margin top al footer

--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -136,7 +136,7 @@
             <div>
                 <p>Medios de paso disponibles</p>
                 <div>
-                    <!-- Hacer con grid -->
+                    <!-- Hacer con grid y :nth-child() para posicionar por hijo -->
                     <!-- webpay - redcompra - santander - mercadopago - visa y demas - bancoestado -->
                     <img src="../images/webpay.png" alt="mediospago">
                     <img src="../images/redcompra.png" alt="mediospago">
