Se comienza a modificar el html de shoppingcart

--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -120,21 +120,17 @@
         </section>
         <section>
             <div>
-                <span>
-                    RESUMEN
-                </span>
+                <span>RESUMEN</span>
             </div>
             <div>
-                <span>
-                    Total a pagar:
-                </span>
-                <span>
-                    $539.980
-                </span>
+                <div>
+                    <span>Total a pagar:</span>
+                    <span>$539.980</span>
+                </div>
                 <button type="button">Iniciar Pago</button>
             </div>
             <div>
-                <p>Medios de paso disponibles</p>
+                <p>Medios de pago disponibles</p>
                 <div>
                     <!-- Hacer con grid y :nth-child() para posicionar por hijo -->
                     <!-- webpay - redcompra - santander - mercadopago - visa y demas - bancoestado -->
