Se agrega los alt a las IMG de cuotas de todas las paginas del header

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         </nav>
         <!-- Imagen de cuotas con enlace a pagina de información de los bancos por convenio -->
         <div class="cuotas">
-            <a href=""><img src="./images/cuotas.png" alt=""></a>
-            <a href=""><img src="./images/cuotascortas.png" alt=""></a>
+            <a href=""><img src="./images/cuotas.png" alt="imgcuotas1"></a>
+            <a href=""><img src="./images/cuotascortas.png" alt="imgcuotas2"></a>
         </div>
     </header>
 
