Se agrega los alt a las IMG del logo de todas las paginas del footer

--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
     <footer id="piepagina">
         <section class="pie socialcontacto">
             <div class="logofooter">
-                <img src="./images/logosinfondo.png" alt="">
+                <img src="./images/logosinfondo.png" alt="imglogofooter">
             </div>
             <div class="socialesmetodo">
                 <i class="fas fa-envelope"></i>
