Se cambia el logo de los header de todas las paginas

--- a/pages/login.html
+++ b/pages/login.html
@@ -22,7 +22,7 @@
         <!--  -->
         <div class="containercabezal">
             <div class="logohead">
-                <a href="../index.html"><img src="../images/logosinfondo.png" alt="logo"></a>
+                <a href="../index.html"><img src="../images/Logoconfondocircular.png" alt="logo"></a>
             </div>
             <div class="presearch">
                 <div class="presentation">
