--- a/pages/login.html
+++ b/pages/login.html
@@ -69,10 +69,10 @@
                                                 <td class="text-center align-middle"><button type="button" class="btn"><i class="fas fa-trash"></i></button></td>
                                             </tr>
                                             <tr>
-                                                <td class="text-center align-middle">Mouse gamer Logitech G305</td>
-                                                <td class="text-center align-middle">$39.990</td>
+                                                <td class="text-center align-middle">Notebook TUF Gaming F15 FX506 Intel</td>
+                                                <td class="text-center align-middle">$649.990</td>
                                                 <td class="text-center align-middle">- 1 +</td>
-                                                <td class="text-center align-middle">$39.990</td>
+                                                <td class="text-center align-middle">$649.990</td>
                                                 <td class="text-center align-middle"><button type="button" class="btn"><i class="fas fa-trash"></i></button></td>
                                             </tr>
                                         </tbody>
