Se agrega estructura base del html en shoppingcart y product

--- a/pages/product.html
+++ b/pages/product.html
@@ -113,6 +113,46 @@
         </div>
     </header>
 
+    <!-- Sección del producto detallado -->
+    <main id="productcontainer">
+        <section class="proproduct">
+            <div class="imagesproproduct">
+
+            </div>
+            <div class="descriptionproproduct">
+
+            </div>
+            <!-- Sección del contenido oculto DESCRIPCION - FICHATECNICA - GARANTIA -->
+            <div class="container mt-5">
+                <ul class="nav nav-tabs" id="mytabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="descripcion-tab" data-bs-toggle="tab" href="#descripcion">Descripción</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="fichatecnica-tab" data-bs-toggle="tab" href="#fichatecnica">Ficha Técnica</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="garantia-tab" data-bs-toggle="tab" href="#garantia">Garantía</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="descripcion">
+                        <h2>Descripción del producto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ipsam maiores cupiditate, voluptates fugiat magni recusandae non enim laudantium dicta dolores ullam est modi, iste excepturi, numquam eveniet hic explicabo? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus quaerat, sit minus error architecto doloribus ab harum a! Magni nihil ad atque quas aspernatur rerum eligendi debitis ipsam quasi enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsam, qui amet tempora aliquam eum nihil perspiciatis excepturi dicta aliquid eaque nisi fugit possimus impedit cum illo iste, quod ipsa. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium suscipit pariatur dolorem perferendis quas? Reprehenderit fuga quaerat facilis, ex eos recusandae molestiae officia hic. Odio blanditiis assumenda ea incidunt architecto.</p>
+                    </div>
+                    <div class="tab-pane fade" id="fichatecnica">
+                        <h2>Ficha Técnica</h2>
+                        <p>Detalles técnicos del producto...</p>
+                    </div>
+                    <div class="tab-pane fade" id="garantia">
+                        <h2>Garantía</h2>
+                        <p>Información sobre la garantía del producto...</p>
+                </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- Seccion footer -->
     <footer id="piepagina">
         <section class="pie socialcontacto">
