Se realiza main de pag product y comienza main de categoriesproducts

--- a/pages/product.html
+++ b/pages/product.html
@@ -116,13 +116,73 @@
     <main id="productcontainer">
         <section class="proproduct">
             <div class="imagesproproduct">
-
+                <div class="mainimgproproduct">
+                    <img src="" alt="imgproproductone">
+                </div>
+                <div class="secondaryimgproproduct">
+                    <img src="" alt="imgproproducttwo">
+                    <img src="" alt="imgproproductthree">
+                    <img src="" alt="imgproproductfour">
+                    <img src="" alt="imgproproductfive">
+                    <img src="" alt="imgproproductsix">
+                </div>
             </div>
-            <div class="descriptionproproduct">
-
+            <div class="detallesproproduct">
+                <div class="brandproproduct">
+                    <span><strong>Asus </strong><i class="fas fa-registered"></i></span>
+                </div>
+                <div class="nameproproduct">
+                    <p>Notebook TUF Gaming F15 FX506 Intel Core i5-11400H NVIDIA RTX 2050 4GB 15.6" FHD 144Hz 8GB 512GB SSD Windows 11 Graphite Black</p>
+                </div>
+                <div class="valueproproduct">
+                    <div class="currentvalueproproduct">
+                        <span><strong>$ 649.990</strong></span>
+                        <span>Valor unidad</span>
+                    </div>
+                    <div class="prevalueproproduct">
+                        <span><s>$ 779.990</s></span>
+                        <span>Valor unidad antes</span>
+                    </div>
+                </div>
+                <div class="boxnumproproduct">
+                    <div id="contcontainer">
+                        <button id="btndecrementar" onclick="decrementar()">-</button>
+                        <span id="contador">1</span>
+                        <button id="btnincrementar" onclick="incrementar()">+</button>
+                    </div>
+                    <form action="" class="btnstartpaymentproproduct">
+                        <button type="submit">Añadir al carrito</button>
+                    </form>
+                </div>
+                <div class="informationproproduct">
+                    <div>
+                        <i class="fas fa-truck-fast"></i>
+                        <p>Despacho adomicilio disponible</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-store-alt"></i>
+                        <p>Retiro en local disponible</p>
+                    </div>
+                    <div>
+                        <i class="fa fa-money"></i>
+                        <p>Cotización de productos disponible</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-credit-card-alt"></i>
+                        <p>Hasta 24 cuotas sin interes disponible</p>
+                    </div>
+                </div>
+                <div class="comentproproduct">
+                    <div class="infoproproduct">
+                        <p>Nota: Stock desfasado 15 minutos aproximado.</p>
+                    </div>
+                    <div class="detproproduct">
+                        <p>Vigencia Promoción: Martes 31/10/2023 00:00 al Jueves 28/12/2023 23:59 o hasta agotar stock disponible en promoción.</p>
+                    </div>
+                </div>
             </div>
             <!-- Sección del contenido oculto DESCRIPCION - FICHATECNICA - GARANTIA -->
-            <div class="container mt-5">
+            <div class="descriptionproproduct container mt-5">
                 <ul class="nav nav-tabs" id="mytabs">
                     <li class="nav-item">
                         <a class="nav-link active" id="descripcion-tab" data-bs-toggle="tab" href="#descripcion">Descripción</a>
@@ -137,7 +197,7 @@
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="descripcion">
                         <h2>Descripción del producto</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ipsam maiores cupiditate, voluptates fugiat magni recusandae non enim laudantium dicta dolores ullam est modi, iste excepturi, numquam eveniet hic explicabo? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus quaerat, sit minus error architecto doloribus ab harum a! Magni nihil ad atque quas aspernatur rerum eligendi debitis ipsam quasi enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsam, qui amet tempora aliquam eum nihil perspiciatis excepturi dicta aliquid eaque nisi fugit possimus impedit cum illo iste, quod ipsa. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium suscipit pariatur dolorem perferendis quas? Reprehenderit fuga quaerat facilis, ex eos recusandae molestiae officia hic. Odio blanditiis assumenda ea incidunt architecto.</p>
+                        <img src="../images/Descripcionlaptop.jpg" alt="descripciondelnotebook">
                     </div>
                     <div class="tab-pane fade" id="fichatecnica">
                         <h2>Ficha Técnica</h2>
