--- a/pages/categoriesproducts.html
+++ b/pages/categoriesproducts.html
@@ -112,6 +112,118 @@
         </div>
     </header>
 
+    <!-- Sección de todos los productos -->
+    <main id="containercategoriesproducts">
+        <section id="containercatproducts">
+            <!-- Filtro de acordeon -->
+            <div class="container mt-5">
+                <h2>Filtro</h2>
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Sección 1
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 1.1
+                                </label>
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 1.2
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Sección 2
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 2.1
+                                </label>
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 2.2
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Sección 3
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 3.1
+                                </label>
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 3.2
+                                </label>
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 3.3
+                                </label>
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 3.4
+                                </label>
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 3.5
+                                </label>
+                                <label class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="">
+                                    Opción 3.6
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ctrcatproducts">
+                <div class="filtrosecundario">
+                    <span>Ordenar por:</span>
+                    <select name="" id="">
+                        <option value="">Relevancia</option>
+                        <option value="">Nombre</option>
+                        <option value="">Marca</option>
+                        <option value="">Mayor precio</option>
+                        <option value="">Menor precio</option>
+                    </select>
+                </div>
+                <div class="catproducts">
+                    
+                </div>
+                <div class="pagforcat">
+                    <div class="pagactual">
+                        <p>Pagina actual </p>
+                        <span id="contadorpagcat">1</span>
+                    </div>
+                    <div class="pagcat">
+                        <button type="button">1</button>
+                        <button type="button">2</button>
+                        <button type="button">3</button>
+                        <button type="button">4</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- Seccion footer -->
     <footer id="piepagina">
         <section class="pie socialcontacto">
