Se realiza separecion del sass

--- a/pages/changepassword.html
+++ b/pages/changepassword.html
@@ -115,7 +115,7 @@
     <!-- Section principal del cambio de contraseña -->
     <main id="formcontainer">
         <section id="sectionform">
-            <div>
+            <div class=".nameform">
                 <h2>Ingrese la nueva contraseña</h2>
             </div>
             <form action="" class="formulario">
